Fix navbar z-index issue

--- a/src/components/MainnetBanner/style.scss
+++ b/src/components/MainnetBanner/style.scss
@@ -2,7 +2,7 @@
 
 .Banner-wrapper {
   position: relative;
-  z-index: 4;
+  z-index: 6;
   background-color: #111316;
 }
 
